Layout and spacing fixes

--- a/css/main.less
+++ b/css/main.less
@@ -120,10 +120,10 @@ header{
 		.editor_container{
 			margin: 10px 20px;
 			.CodeMirror-scroll{
-				height: 280px;
+				height: 300px;
 			}
 			.code_submit{
-				margin: 5px;
+				margin: 10px;
 				float: right;
 			}
 		}
@@ -132,7 +132,7 @@ header{
 			margin: 10px 20px;
 			overflow: auto;
 			pre{
-				height: 120px;
+				height: 100px;
 			}
 		}
 	}
